Add header content to index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <title>Smarticus</title>
 </head>
 <body>
-    
-    
+    <header id="header">
+        <h1 id="logo"><i class="fab fa-think-peaks"></i></h1>
+        <p class="smarticus">Smarticus</p>
+    </header>
+
 
 
 
