Add content to main-catagory-grid section in index.html

--- a/index.html
+++ b/index.html
@@ -13,10 +13,36 @@
 <title>Smarticus</title>
 </head>
 <body>
+
     <header id="header">
         <h1 id="logo"><i class="fab fa-think-peaks"></i></h1>
         <p class="smarticus">Smarticus</p>
     </header>
+
+    <section id="main-catagory-grid">
+        <div id="welcome-person"></div>
+        <div id="catagorySports">
+            <i class="fas fa-dumbbell"></i>
+            <p>Sports</p>
+        </div>
+        <div id="catagoryScience">
+            <i class="fas fa-dumbbell"></i>
+            <p>Science</p>
+        </div>
+        <div id="catagoryFilm">
+            <i class="fas fa-dumbbell"></i>
+            <p>Film</p>
+        </div>
+        <div id="catagoryHistory">
+            <i class="fas fa-dumbbell"></i>
+            <p>History</p>
+        </div>
+        <div id="catagoryanimals">
+            <i class="fas fa-dumbbell"></i>
+            <p>Animals</p>
+        </div>
+    </section>
+
 
 
 
