Change icons on main-catagory-grid to match text

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             <p>Sports</p>
         </div>
         <div id="catagoryScience">
-            <i class="fas fa-dumbbell"></i>
+            <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
         <div id="catagoryFilm">
-            <i class="fas fa-dumbbell"></i>
+            <i class="fas fa-video"></i>
             <p>Film</p>
         </div>
         <div id="catagoryHistory">
-            <i class="fas fa-dumbbell"></i>
+            <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
         <div id="catagoryanimals">
-            <i class="fas fa-dumbbell"></i>
+            <i class="fas fa-spider"></i>
             <p>Animals</p>
         </div>
     </section>
