Add classes to main-catagory-grid div in index.html

--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
 
     <section id="main-catagory-grid">
         <div id="welcome-person"></div>
-        <div id="catagorySports">
+        <div id="catagorySports" class="center-all grid-even">
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
-        <div id="catagoryScience">
+        <div id="catagoryScience" class="center-all grid-odd">
             <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
-        <div id="catagoryFilm">
+        <div id="catagoryFilm" class="center-all grid-even">
             <i class="fas fa-video"></i>
             <p>Film</p>
         </div>
-        <div id="catagoryHistory">
+        <div id="catagoryHistory" class="center-all grid-odd">
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
-        <div id="catagoryanimals">
+        <div id="catagoryanimals" class="center-all grid-even">
             <i class="fas fa-spider"></i>
             <p>Animals</p>
         </div>
