Add p to welcome-person in main-catagory-grid and class center-all in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </header>
 
     <section id="main-catagory-grid">
-        <div id="welcome-person"></div>
+        <div id="welcome-person" class="center-all">
+            <p>Pick a catagory</p>
+        </div>
         <div id="catagorySports" class="center-all grid-even">
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
