--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header id="header">
-        <h1 id="logo"><i class="fab fa-think-peaks"></i></h1>
+        <i class="fab fa-think-peaks" id="logo"></i>
         <p class="smarticus">Smarticus</p>
     </header>
 
