--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <form action="#" method="post" class="center-all" id="user-form">
             <label for="user-name">Enter your nickname and then lets have the craic!!</label>
             <input type="text" name="user-name" id="user-name" required>
-            <input type="submit" value="Go!!" id="user-submit">
+            <input type="submit" value="Go" id="user-submit">
         </form>
     </section>
 
