Add questions section to index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,28 @@
         </div>
     </section>
 
+    <section id="questions">
+        <p id="close">&#10005</p>
+        <h3 id="quiz catagory">Test Catagory</h3>
+        <h2 id="question">Test Question</h2>
+        <div class="options-container" id="answer-a">
+            <p class="option">A</p>
+            <p id="option-a" class="option-text">Sample 1</p>
+        </div>
+        <div class="options-container" id="answer-b">
+            <p class="option">B</p>
+            <p id="option-b" class="option-text">Sample 2</p>
+        </div>
+        <div class="options-container" id="answer-c">
+            <p class="option">C</p>
+            <p id="option-c" class="option-text">Sample 3</p>
+        </div>
+        <div class="options-container" id="answer-d">
+            <p class="option">D</p>
+            <p id="option-d" class="option-text">Sample 4</p>
+        </div>
+    </section>
+
 
 
 
