Add style to #questions in style.css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </section>
 
-    <section id="questions">
+    <section id="questions" class="center-all">
         <p id="close">&#10005</p>
         <h3 id="quiz catagory">Test Catagory</h3>
         <h2 id="question">Test Question</h2>
