Change styling of #score in style.css

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section id="questions" class="center-all">
         <p id="close">&#10005</p>
         <h3 id="quiz-catagory">Test Catagory</h3>
-        <p id="score">5</p>
+        <p id="score"></p>
         <h2 id="question">Test Question</h2>
         <div class="options-container" id="answer-a">
             <p class="option">A</p>
