Add function to open question section, close catagory grid and add catagory title in script.js

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section id="questions" class="center-all">
         <p id="close">&#10005</p>
-        <h3 id="quiz-catagory">Test Catagory</h3>
+        <h3 id="quiz-catagory"></h3>
         <p id="score">Score</p>
         <h2 id="question">Test Question</h2>
         <div class="options-container" id="answer-a">
