Change location of <script> in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section id="user" class="center-all">
         <h2><i class="fab fa-think-peaks"></i> Smarticus Quizzes</h2>
-        <form action="#" method="post" class="center-all" id="user-form">
+        <form action="#" method="POST" class="center-all" id="user-form">
             <label for="user-name">Enter your nickname and then lets have the craic!!</label>
             <input type="text" name="user-name" id="user-name" required>
             <input type="submit" value="Go" id="user-submit">
@@ -87,8 +87,9 @@
 
 
 
-<script src="assets/script/script.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
