Change variables to const and adjust layout in script.js

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
 
     <section id="questions" class="center-all">
-        <p id="close">&#10005</p>
+        <p id="close-questions">&#10005</p>
         <h3 id="quiz-catagory"></h3>
         <p id="score">Score</p>
         <h2 id="question">Test Question</h2>
