--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section id="user" class="center-all">
         <h2><i class="fab fa-think-peaks"></i> Smarticus Quizzes</h2>
-        <form action="#" method="POST" class="center-all" id="user-form">
+        <form class="center-all" id="user-form">
             <label for="user-name">Enter your nickname and then lets have the craic!!</label>
             <input type="text" name="user-name" id="user-name" required>
             <input type="submit" value="Go" id="user-submit">
