Change smarticus class name to better suited one

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header id="header">
         <i class="fab fa-think-peaks" id="logo"></i>
-        <p class="smarticus">Smarticus</p>
+        <p class="header-text">Smarticus</p>
     </header>
 
     <section id="user" class="center-all">
