Add spin-loader div to index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
 
+    <div class="spin-loader center-all"></div>
+
     <header id="header">
         <i class="fab fa-think-peaks" id="logo"></i>
         <p class="header-text">Smarticus</p>
