Add gif to spin-loader in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
 
-    <div class="spin-loader center-all"></div>
+    <div class="spin-loader center-all">
+        <img src="assets/gif/loading.gif" alt="Spinnig loading wheel">
+    </div>
 
     <header id="header">
         <i class="fab fa-think-peaks" id="logo"></i>
