Add Add const spinLoader and id to spin-loader div

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <div class="spin-loader center-all">
+    <div id="spin-loader" class="spin-loader center-all">
         <img src="assets/gif/loading.gif" alt="Spinnig loading wheel">
     </div>
 
