--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p id="close-questions">&#10005</p>
         <h3 id="quiz-catagory"></h3>
         <p id="score">Score</p>
-        <h2 id="question">Test Question</h2>
+        <h2 id="question"></h2>
         <div class="options-container" id="answer-a">
             <p class="option">A</p>
             <p id="option-a" class="option-text" data-number="1">Sample 1</p>
