Add class of catagory to the catagories in main-catagory-grid in index.html

--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
         <div id="welcome-person" class="center-all">
             <p>Pick a catagory</p>
         </div>
-        <div id="catagorySports" data-type="sport" class="center-all grid-even">
+        <div id="catagorySports" data-type="sport" class="center-all grid-even catagory">
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
-        <div id="catagoryScience" data-type="science" class="center-all grid-odd">
+        <div id="catagoryScience" data-type="science" class="center-all grid-odd catagory">
             <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
-        <div id="catagoryFilm" data-type="film" class="center-all grid-even">
+        <div id="catagoryFilm" data-type="film" class="center-all grid-even catagory">
             <i class="fas fa-video"></i>
             <p>Film</p>
         </div>
-        <div id="catagoryHistory" data-type="history" class="center-all grid-odd">
+        <div id="catagoryHistory" data-type="history" class="center-all grid-odd catagory">
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
-        <div id="catagoryanimals" data-type="animals" class="center-all grid-even">
+        <div id="catagoryanimals" data-type="animals" class="center-all grid-even catagory">
             <i class="fas fa-spider"></i>
             <p>Animals</p>
         </div>
