Add increaseScore function

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="questions" class="center-all">
         <p id="close-questions">&#10005</p>
         <h3 id="quiz-catagory"></h3>
-        <p id="score">Score</p>
+        <p id="score"></p>
         <h2 id="question"></h2>
         <div class="options-container" id="answer-a">
             <p class="option">A</p>
