Add results-screen section to index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
         </div>
     </section>
 
+    <section id="results-screen">
+        <h2><i class="fab fa-think-peaks"></i> Smarticus Quizzes</h2>
+        <p id="results-user"></p>
+        <p id="results-score"></p>
+        <button id="results-button"><i class="fas fa-arrow-right"></i></button>
 
+    </section>
 
 
 
