Change style from # to . for user-submit button and add class to results button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <form class="center-all" id="user-form">
             <label for="user-name">Enter your nickname and then lets have the craic!!</label>
             <input type="text" name="user-name" id="user-name" required>
-            <button id="user-submit"><i class="fas fa-arrow-right"></i></button>
+            <button id="user-submit" class="round-button"><i class="fas fa-arrow-right"></i></button>
         </form>
     </section>
 
@@ -85,7 +85,7 @@
         <h2><i class="fab fa-think-peaks"></i> Smarticus Quizzes</h2>
         <p id="results-user"></p>
         <p id="results-score"></p>
-        <button id="results-button"><i class="fas fa-arrow-right"></i></button>
+        <button id="results-button" class="round-button"><i class="fas fa-arrow-right"></i></button>
 
     </section>
 
