Add style to results-screen

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <section id="results-screen">
+    <section id="results-screen" class="center-all">
         <h2><i class="fab fa-think-peaks"></i> Smarticus Quizzes</h2>
         <p id="results-user"></p>
         <p id="results-score"></p>
