Add autocomplete off to user form in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="user" class="center-all">
         <h2><i class="fab fa-think-peaks"></i> Smarticus Quizzes</h2>
-        <form class="center-all" id="user-form">
+        <form class="center-all" id="user-form" autocomplete="off">
             <label for="user-name">Enter your nickname and then lets have the craic!!</label>
             <input type="text" name="user-name" id="user-name" required>
             <button id="user-submit" class="round-button"><i class="fas fa-arrow-right"></i></button>
