Add classes to #main-catagory-grid children for media queries

--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
     </section>
 
     <section id="main-catagory-grid">
-        <div id="welcome-person" class="center-all">
+        <div id="welcome-person" class="center-all catagory-grid-item1">
             <p>Pick a catagory</p>
         </div>
-        <div id="catagorySports" data-type="sport" class="center-all grid-even catagory">
+        <div id="catagorySports" data-type="sport" class="center-all grid-even catagory catagory-grid-item2">
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
-        <div id="catagoryScience" data-type="science" class="center-all grid-odd catagory">
+        <div id="catagoryScience" data-type="science" class="center-all grid-odd catagory catagory-grid-item3">
             <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
-        <div id="catagoryFilm" data-type="film" class="center-all grid-even catagory">
+        <div id="catagoryFilm" data-type="film" class="center-all grid-even catagory catagory-grid-item4">
             <i class="fas fa-video"></i>
             <p>Film</p>
         </div>
-        <div id="catagoryHistory" data-type="history" class="center-all grid-odd catagory">
+        <div id="catagoryHistory" data-type="history" class="center-all grid-odd catagory catagory-grid-item5">
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
-        <div id="catagoryanimals" data-type="animals" class="center-all grid-even catagory">
+        <div id="catagoryanimals" data-type="animals" class="center-all grid-even catagory catagory-grid-item6">
             <i class="fas fa-spider"></i>
             <p>Animals</p>
         </div>
