Add geography child to #main-catagory-grid in index.html

--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
-        <div id="catagoryanimals" data-type="animals" class="center-all grid-even catagory catagory-grid-item6">
+        <div id="catagoryAnimals" data-type="animals" class="center-all grid-even catagory catagory-grid-item6">
             <i class="fas fa-spider"></i>
             <p>Animals</p>
         </div>
+        <div id="catagoryGeography" data-type="geography" class="center-all grid-odd catagory catagory-grid-item7">
+            <i class="fas fa-globe-europe"></i>
+            <p>Geography</p>
+        </div>
+    
+    
     </section>
 
     <section id="questions" class="center-all">
