--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <p id="close-questions">&#10005</p>
         <h3 id="quiz-catagory"></h3>
         <p id="score"></p>
+        <p id="question-number"></p>
         <h2 id="question"></h2>
         <div class="options-container" id="answer-a">
             <p class="option">A</p>
