Change img src for spin loader in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div id="spin-loader" class="spin-loader center-all">
-        <img src="assets/gif/loading.gif" alt="Spinnig loading wheel">
+        <img src="assets/images/loading.gif" alt="Spinnig loading wheel">
     </div>
 
     <header id="header">
