Remove data-numbers from options in #questions

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
         <h2 id="question"></h2>
         <div class="options-container" id="answer-a">
             <p class="option">A</p>
-            <p id="option-a" class="option-text" data-number="1"></p>
+            <p id="option-a" class="option-text"></p>
         </div>
         <div class="options-container" id="answer-b">
             <p class="option">B</p>
-            <p id="option-b" class="option-text" data-number="2"></p>
+            <p id="option-b" class="option-text"></p>
         </div>
         <div class="options-container" id="answer-c">
             <p class="option">C</p>
-            <p id="option-c" class="option-text" data-number="3"></p>
+            <p id="option-c" class="option-text"></p>
         </div>
         <div class="options-container" id="answer-d">
             <p class="option">D</p>
-            <p id="option-d" class="option-text" data-number="4"></p>
+            <p id="option-d" class="option-text"></p>
         </div>
     </section>
 
