--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
         <p id="score"></p>
         <p id="question-number"></p>
         <h2 id="question"></h2>
-        <div class="options-container">
+        <div class="options-container" id="answer-a">
             <p class="option">A</p>
-            <p id="option-a" class="option-text"></p>
+            <p class="option-text"></p>
         </div>
         <div class="options-container">
             <p class="option">B</p>
-            <p id="option-b" class="option-text"></p>
+            <p class="option-text"></p>
         </div>
         <div class="options-container">
             <p class="option">C</p>
-            <p id="option-c" class="option-text"></p>
+            <p class="option-text"></p>
         </div>
         <div class="options-container">
             <p class="option">D</p>
-            <p id="option-d" class="option-text"></p>
+            <p class="option-text"></p>
         </div>
     </section>
 
