--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p id="score"></p>
         <p id="question-number"></p>
         <h2 id="question"></h2>
-        <div class="options-container" id="answer-a">
+        <div class="options-container">
             <p class="option">A</p>
             <p class="option-text"></p>
         </div>
