--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
         <div id="welcome-person" class="center-all catagory-grid-item1">
             <p>Pick a catagory</p>
         </div>
-        <div id="catagorySports" data-type="sport" class="center-all grid-even catagory catagory-grid-item2">
+        <div id="catagorySports" class="center-all grid-even catagory-grid-item2">
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
-        <div id="catagoryScience" class="center-all grid-odd catagory catagory-grid-item3">
+        <div id="catagoryScience" class="center-all grid-odd catagory-grid-item3">
             <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
-        <div id="catagoryFilm" class="center-all grid-even catagory catagory-grid-item4">
+        <div id="catagoryFilm" class="center-all grid-even catagory-grid-item4">
             <i class="fas fa-video"></i>
             <p>Film</p>
         </div>
-        <div id="catagoryHistory" class="center-all grid-odd catagory catagory-grid-item5">
+        <div id="catagoryHistory" class="center-all grid-odd catagory-grid-item5">
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
-        <div id="catagoryAnimals" class="center-all grid-even catagory catagory-grid-item6">
+        <div id="catagoryAnimals" class="center-all grid-even catagory-grid-item6">
             <i class="fas fa-spider"></i>
             <p>Animals</p>
         </div>
-        <div id="catagoryGeography" class="center-all grid-odd catagory catagory-grid-item7">
+        <div id="catagoryGeography" class="center-all grid-odd catagory-grid-item7">
             <i class="fas fa-globe-europe"></i>
             <p>Geography</p>
         </div>
