--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
         </form>
     </section>
 
-    <section id="main-catagory-grid">
-        <div id="welcome-person" class="center-all catagory-grid-item1">
-            <p>Pick a catagory</p>
+    <section id="main-category-grid">
+        <div id="welcome-person" class="center-all category-grid-item1">
+            <p>Pick a category</p>
         </div>
-        <div id="catagorySports" class="center-all grid-even catagory-grid-item2">
+        <div id="categorySports" class="center-all grid-even category-grid-item2">
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
-        <div id="catagoryScience" class="center-all grid-odd catagory-grid-item3">
+        <div id="categoryScience" class="center-all grid-odd category-grid-item3">
             <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
-        <div id="catagoryFilm" class="center-all grid-even catagory-grid-item4">
+        <div id="categoryFilm" class="center-all grid-even category-grid-item4">
             <i class="fas fa-video"></i>
             <p>Film</p>
         </div>
-        <div id="catagoryHistory" class="center-all grid-odd catagory-grid-item5">
+        <div id="categoryHistory" class="center-all grid-odd category-grid-item5">
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
-        <div id="catagoryAnimals" class="center-all grid-even catagory-grid-item6">
+        <div id="categoryAnimals" class="center-all grid-even category-grid-item6">
             <i class="fas fa-spider"></i>
             <p>Animals</p>
         </div>
-        <div id="catagoryGeography" class="center-all grid-odd catagory-grid-item7">
+        <div id="categoryGeography" class="center-all grid-odd category-grid-item7">
             <i class="fas fa-globe-europe"></i>
             <p>Geography</p>
         </div>
@@ -67,7 +67,7 @@
 
     <section id="questions" class="center-all">
         <p id="close-questions">&#10005</p>
-        <h3 id="quiz-catagory"></h3>
+        <h3 id="quiz-category"></h3>
         <p id="score"></p>
         <p id="question-number"></p>
         <h2 id="question"></h2>
