--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     <section id="main-category-grid">
         <div id="welcome-person" class="center-all category-grid-item1">
             <p>Pick a category</p>
+            <div id="difficulty">
+                <input type="radio" name="difficulty" id="easy-diff" value="easy">
+                <label for="easy">Easy</label>
+                <input type="radio" name="difficulty" id="medium-diff" value="medium">
+                <label for="medium">Medium</label>
+                <input type="radio" name="difficulty" id="hard-diff" value="hard">
+                <label for="hard">Hard</label>
+            </div>
         </div>
         <div id="categorySports" class="center-all grid-even category-grid-item2">
             <i class="fas fa-dumbbell"></i>
