Add checked status to easy radio in #difficulty

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="welcome-person" class="center-all category-grid-item1">
             <p>Pick a category</p>
             <div id="difficulty">
-                <input type="radio" name="difficulty" id="easy-diff" value="easy">
+                <input type="radio" name="difficulty" id="easy-diff" value="easy" checked>
                 <label for="easy">Easy</label>
                 <input type="radio" name="difficulty" id="medium-diff" value="medium">
                 <label for="medium">Medium</label>
