--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="main-category-grid">
         <div id="welcome-person" class="center-all category-grid-item1">
             <p>Pick a category</p>
-            <div id="difficulty">
+            <div id="difficulty" class="center-all">
                 <input type="radio" name="difficulty" id="easy-diff" value="easy" checked>
                 <label for="easy" class="diff-label">Easy</label>
                 <input type="radio" name="difficulty" id="medium-diff" value="medium">
