Change for on labels in #difficulty in #main-catagory-grid

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <p>Pick a category</p>
             <div id="difficulty" class="center-all">
                 <input type="radio" name="difficulty" id="easy-diff" value="easy" checked>
-                <label for="easy" class="diff-label">Easy</label>
+                <label for="easy-diff" class="diff-label">Easy</label>
                 <input type="radio" name="difficulty" id="medium-diff" value="medium">
-                <label for="medium" class="diff-label">Medium</label>
+                <label for="medium-diff" class="diff-label">Medium</label>
                 <input type="radio" name="difficulty" id="hard-diff" value="hard">
-                <label for="hard" class="diff-label">Hard</label>
+                <label for="hard-diff" class="diff-label">Hard</label>
             </div>
         </div>
         <div id="categorySports" class="center-all grid-even category-grid-item2">
