--- a/index.html
+++ b/index.html
@@ -36,14 +36,6 @@
     <section id="main-category-grid">
         <div id="welcome-person" class="center-all category-grid-item1">
             <p>Pick a category</p>
-            <div id="difficulty" class="center-all">
-                <input type="radio" name="difficulty" id="easy-diff" value="easy" checked>
-                <label for="easy-diff" class="diff-label">Easy</label>
-                <input type="radio" name="difficulty" id="medium-diff" value="medium">
-                <label for="medium-diff" class="diff-label">Medium</label>
-                <input type="radio" name="difficulty" id="hard-diff" value="hard">
-                <label for="hard-diff" class="diff-label">Hard</label>
-            </div>
         </div>
         <div id="categorySports" class="center-all grid-even category-grid-item2">
             <i class="fas fa-dumbbell"></i>
@@ -104,7 +96,23 @@
         <button id="results-button" class="round-button"><i class="fas fa-arrow-right"></i></button>
     </section>
 
+    <section  id="difficulty-buttons">
+        <div id="difficulty" class="center-all">
+            <div>
+                <input type="radio" name="difficulty" id="easy-diff" value="easy" checked>
+                <label for="easy-diff" class="diff-label">Easy</label>
+            </div>
+            <div>
+                <input type="radio" name="difficulty" id="medium-diff" value="medium">
+                <label for="medium-diff" class="diff-label">Medium</label>
+            </div>
+            <div>
+                <input type="radio" name="difficulty" id="hard-diff" value="hard">
+                <label for="hard-diff" class="diff-label">Hard</label>
+            </div>
+        </div>
 
+    </section>
 
 
 
