Add style to .diff-label in style.css

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div>
                 <input type="radio" name="difficulty" id="medium-diff" value="medium">
-                <label for="medium-diff" class="diff-label">Medium</label>
+                <label for="medium-diff" class="diff-label">So-so</label>
             </div>
             <div>
                 <input type="radio" name="difficulty" id="hard-diff" value="hard">
