Add aria-label to #user-submit in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <form class="center-all" id="user-form" autocomplete="off">
             <label for="user-name">Enter your nickname and then lets have the craic!!</label>
             <input type="text" name="user-name" id="user-name" required>
-            <button id="user-submit" class="round-button"><i class="fas fa-arrow-right"></i></button>
+            <button id="user-submit" class="round-button" aria-label="Link to the catagories screen (opens in the same tab)"><i class="fas fa-arrow-right"></i></button>
         </form>
     </section>
 
