Change aria-label to #user-name in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2><i class="fab fa-think-peaks"></i> Smarticus Quizzes</h2>
         <form class="center-all" id="user-form" autocomplete="off">
             <label for="user-name">Enter your nickname and then lets have the craic!!</label>
-            <input type="text" name="user-name" id="user-name" aria-label="Enter your name" required>
+            <input type="text" name="user-name" id="user-name" aria-label="Enter your name (required)" required>
             <button id="user-submit" class="round-button" aria-label="Link to the catagories screen (opens in the same tab)"><i class="fas fa-arrow-right"></i></button>
         </form>
     </section>
