Add aria-label to #categorySports in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="welcome-person" class="center-all category-grid-item1">
             <p>Pick a category</p>
         </div>
-        <div id="categorySports" class="center-all grid-even category-grid-item2">
+        <div id="categorySports" class="center-all grid-even category-grid-item2" aria-label="Link to sports questions (opens in the same tab)">
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
