--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
-        <div id="categoryScience" class="center-all grid-odd category-grid-item3">
+        <div id="categoryScience" class="center-all grid-odd category-grid-item3"  aria-label="Link to science questions (opens in the same tab)">
             <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
