--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
-        <div id="categoryScience" class="center-all grid-odd category-grid-item3"  aria-label="Link to science questions (opens in the same tab)">
+        <div id="categoryScience" class="center-all grid-odd category-grid-item3" aria-label="Link to science questions (opens in the same tab)">
             <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
-        <div id="categoryFilm" class="center-all grid-even category-grid-item4">
+        <div id="categoryFilm" class="center-all grid-even category-grid-item4" aria-label="Link to film questions (opens in the same tab)">
             <i class="fas fa-video"></i>
             <p>Film</p>
         </div>
