--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <i class="fas fa-video"></i>
             <p>Film</p>
         </div>
-        <div id="categoryHistory" class="center-all grid-odd category-grid-item5">
+        <div id="categoryHistory" class="center-all grid-odd category-grid-item5" aria-label="Link to history questions (opens in the same tab)">
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
