Add aria-label to #categoryAnimals in index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
-        <div id="categoryAnimals" class="center-all grid-even category-grid-item6">
+        <div id="categoryAnimals" class="center-all grid-even category-grid-item6" aria-label="Link to animals questions (opens in the same tab)">
             <i class="fas fa-spider"></i>
             <p>Animals</p>
         </div>
