Add aria-label to #categoryGeography in index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <i class="fas fa-spider"></i>
             <p>Animals</p>
         </div>
-        <div id="categoryGeography" class="center-all grid-odd category-grid-item7">
+        <div id="categoryGeography" class="center-all grid-odd category-grid-item7" aria-label="Link to geography questions (opens in the same tab)">
             <i class="fas fa-globe-europe"></i>
             <p>Geography</p>
         </div>
