--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <title>Smarticus</title>
 </head>
 <body>
-    
+
     <!-- Spin loader -->
     <div id="spin-loader" class="spin-loader center-all">
         <img src="assets/images/loading.gif" alt="Spinnig loading wheel">
@@ -90,19 +90,19 @@
         <!-- Options for user to select -->
         <div class="options-container">
             <p class="option">A</p>
-            <p class="option-text"></p>
+            <p class="option-text" aria-label="Option a (selects option a)"></p>
         </div>
         <div class="options-container">
             <p class="option">B</p>
-            <p class="option-text"></p>
+            <p class="option-text"  aria-label="Option b (selects option b)"></p>
         </div>
         <div class="options-container">
             <p class="option">C</p>
-            <p class="option-text"></p>
+            <p class="option-text"  aria-label="Option c (selects option c)"></p>
         </div>
         <div class="options-container">
             <p class="option">D</p>
-            <p class="option-text"></p>
+            <p class="option-text"  aria-label="Option d (selects option d)"></p>
         </div>
     </section>
 
