--- a/index.html
+++ b/index.html
@@ -90,18 +90,22 @@
         <!-- Options for user to select -->
         <div class="options-container">
             <p class="option">A</p>
+            <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option-text" aria-label="Option a (selects option a)"></p>
         </div>
         <div class="options-container">
+            <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option">B</p>
             <p class="option-text"  aria-label="Option b (selects option b)"></p>
         </div>
         <div class="options-container">
             <p class="option">C</p>
-            <p class="option-text"  aria-label="Option c (selects option c)"></p>
+            <!-- Option text populated in script.js getNewQuestion() -->
+            <p class="option-text" aria-label="Option c (selects option c)"></p>
         </div>
         <div class="options-container">
             <p class="option">D</p>
+            <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option-text"  aria-label="Option d (selects option d)"></p>
         </div>
     </section>
