Add designer's name to spin-loader in index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Spin loader -->
     <div id="spin-loader" class="spin-loader center-all">
         <img src="assets/images/loading.gif" alt="Spinnig loading wheel">
+        <p class="developer-name">daffy web design</p>
     </div>
 
     <!--Header section -->
