Change copyright icon to html symbol in .developer-name in spin-loader section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Spin loader -->
     <div id="spin-loader" class="spin-loader center-all">
         <img src="assets/images/loading.gif" alt="Spinnig loading wheel">
-        <p class="developer-name"><i class="far fa-copyright"></i> daafy design</p>
+        <p class="developer-name">&#169 daafy design</p>
     </div>
 
     <!--Header section -->
