--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 <input type="radio" name="difficulty" id="hard-diff" value="hard">
                 <label for="hard-diff" class="diff-label" aria-label="Sets question to hard">Hard</label>
             </div>
+            <p id="developer-name" class="developer-name">&#169 daafy design</p>
         </div>
     </section>
 
