Add ; to html symbol in #developers-name in index.html

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <!-- Footer section-->
     <footer>
-        <p id="developer-name" class="developer-name center-all">&#169 daafy design</p>
+        <p id="developer-name" class="developer-name center-all">&#169; daafy design</p>
     </footer>
 
 
