--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- Question Section -->
     <section id="questions" class="center-all">
         <!-- Closes the question screen -->
-        <p id="close-questions">&#10005</p>
+        <p id="close-questions">&#10005;</p>
         <!-- Quiz catagory populated in script.js addCatagoryToQuestionPage() -->
         <h3 id="quiz-category"></h3>
         <!-- User score populated in script.js increaseScore() -->
