Change from section to div for #difficulty-buttons

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
 
     <!-- Difficulty buttons section -->
-    <section  id="difficulty-buttons">
+    <div id="difficulty-buttons">
         <div id="difficulty" class="center-all">
             <!-- Easy button -->
             <div>
@@ -140,7 +140,7 @@
                 <label for="hard-diff" class="diff-label" aria-label="Sets question to hard">Hard</label>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- Footer section-->
     <footer>
