Change id of animals catagory div to music

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p>History</p>
         </div>
         <!-- Animals -->
-        <div id="categoryAnimals" class="center-all grid-even category-grid-item6" aria-label="Link to animals questions (opens in the same tab)">
+        <div id="categoryMusic" class="center-all grid-even category-grid-item6" aria-label="Link to animals questions (opens in the same tab)">
             <i class="fas fa-spider"></i>
             <p>Animals</p>
         </div>
