--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
-        <!-- Animals -->
+        <!-- Music -->
         <div id="categoryMusic" class="center-all grid-even category-grid-item6" aria-label="Link to animals questions (opens in the same tab)">
             <i class="fas fa-spider"></i>
-            <p>Animals</p>
+            <p>Music</p>
         </div>
         <!-- Grography -->
         <div id="categoryGeography" class="center-all grid-odd category-grid-item7" aria-label="Link to geography questions (opens in the same tab)">
