Change icon of music catagory in index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <!-- Music -->
         <div id="categoryMusic" class="center-all grid-even category-grid-item6" aria-label="Link to music questions (opens in the same tab)">
-            <i class="fas fa-spider"></i>
+            <i class="fas fa-music"></i>
             <p>Music</p>
         </div>
         <!-- Grography -->
