Change meta description and keywords to reflect catagory changes

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Quizzes on sports, science, film, history and animals."/>
-<meta name="keywords" content="quiz, entertainment, fun, on-line, sports, science, film, history, animals">
+<meta name="Description" content="Quizzes on sports, science, film, history music and geography."/>
+<meta name="keywords" content="quiz, entertainment, fun, on-line, sports, science, film, history, music, geography">
 <meta name="theme-color" content="#9F2323">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
