--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Spin loader -->
     <div id="spin-loader" class="spin-loader center-all">
         <img src="assets/images/loading.gif" alt="Spinnig loading wheel">
-        <p class="developer-name">&#169; daafy design 2021</p>
+        <p class="developer-name">daafy design 2021</p>
     </div>
 
     <!--Header section -->
@@ -144,7 +144,7 @@
 
     <!-- Footer section-->
     <footer>
-        <p id="developer-name" class="developer-name center-all">&#169; daafy design 2021</p>
+        <p id="developer-name" class="developer-name center-all">daafy design 2021</p>
     </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
