Add id to header p in index.thml

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Header section -->
     <header id="header">
         <i class="fab fa-think-peaks" id="logo"></i>
-        <p class="header-text">Smarticus</p>
+        <p class="header-text" id="header-text">Smarticus</p>
     </header>
 
     <!-- User form section -->
