Add #welcome-message p to main-catagory-grid in index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <section id="main-category-grid">
         <!-- Welcome note to the user, name inserted to <p> in script.js handleUserFormSubmit()-->
         <div id="welcome-person" class="center-all category-grid-item1">
+            <p id="welcome-message"></p>
             <p>Pick a category</p>
         </div>
         <!-- Chooses the quiz catagories -->
