Add questions-screen-menu section to index.html

--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
         </div>
     </section>
 
+    <section id="questions-screen-menu">
+        <p id="reset-game">Reset Game</p>
+        <p id="end-game">End Game</p>
+    </section>
+
     <!-- Results screen section -->
     <section id="results-screen" class="center-all">
         <h2><i class="fab fa-think-peaks"></i> Smarticus Quizzes</h2>
