Change #close-questions to #questions-menu in questions section of index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- Question Section -->
     <section id="questions" class="center-all">
         <!-- Closes the question screen -->
-        <p id="close-questions">&#10005;</p>
+        <p id="questions-menu"><i class="fas fa-bars"></i></p>
         <!-- Quiz catagory populated in script.js addCatagoryToQuestionPage() -->
         <h3 id="quiz-category"></h3>
         <!-- User score populated in script.js increaseScore() -->
