Add style to #questions-screen-menu in style.css

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </section>
 
-    <section id="questions-screen-menu">
+    <section id="questions-screen-menu" class="center-all">
         <p id="reset-game">Reset Game</p>
         <p id="end-game">End Game</p>
     </section>
