--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     </section>
 
     <section id="questions-screen-menu" class="center-all">
+        <p id="close-questions-screen-menu">&#10005;</p>
         <p id="reset-game">Reset Game</p>
         <p id="end-game">End Game</p>
     </section>
