Ad icon to #close-questions-screen-menu in question-screen section in index.html

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
     </section>
 
     <section id="questions-screen-menu" class="center-all">
-        <p id="close-questions-screen-menu">Close Menu</p>
+        <p id="close-questions-screen-menu" class="round-button center-all">
+            <i class="fas fa-times"></i>
+        </p>
         <p id="reset-game">Reset Game</p>
         <p id="end-game">End Game</p>
     </section>
