Add class pointer to #results-button in results section in index.html

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <p id="results-user"></p>
         <!-- User's results from the game populated in script.js increaseScore() -->
         <p id="results-score"></p>
-        <button id="results-button" class="round-button" aria-label="Link to the catagories screen (opens in the same tab)"><i class="fas fa-arrow-right"></i></button>
+        <button id="results-button" class="round-button pointer" aria-label="Link to the catagories screen (opens in the same tab)"><i class="fas fa-arrow-right"></i></button>
     </section>
 
     <!-- Difficulty buttons section -->
