Add pointer class to catagories in #main-category-grid in index,html

--- a/index.html
+++ b/index.html
@@ -46,32 +46,32 @@
         </div>
         <!-- Chooses the quiz catagories -->
         <!-- Sport -->
-        <div id="categorySports" class="center-all grid-even category-grid-item2" aria-label="Link to sports questions (opens in the same tab)">
+        <div id="categorySports" class="center-all pointer grid-even category-grid-item2" aria-label="Link to sports questions (opens in the same tab)">
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
         <!-- Science -->
-        <div id="categoryScience" class="center-all grid-odd category-grid-item3" aria-label="Link to science questions (opens in the same tab)">
+        <div id="categoryScience" class="center-all pointer grid-odd category-grid-item3" aria-label="Link to science questions (opens in the same tab)">
             <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
         <!-- Film -->
-        <div id="categoryFilm" class="center-all grid-even category-grid-item4" aria-label="Link to film questions (opens in the same tab)">
+        <div id="categoryFilm" class="center-all pointer grid-even category-grid-item4" aria-label="Link to film questions (opens in the same tab)">
             <i class="fas fa-video"></i>
             <p>Film</p>
         </div>
         <!-- History -->
-        <div id="categoryHistory" class="center-all grid-odd category-grid-item5" aria-label="Link to history questions (opens in the same tab)">
+        <div id="categoryHistory" class="center-all pointer grid-odd category-grid-item5" aria-label="Link to history questions (opens in the same tab)">
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
         <!-- Music -->
-        <div id="categoryMusic" class="center-all grid-even category-grid-item6" aria-label="Link to music questions (opens in the same tab)">
+        <div id="categoryMusic" class="center-all pointer grid-even category-grid-item6" aria-label="Link to music questions (opens in the same tab)">
             <i class="fas fa-music"></i>
             <p>Music</p>
         </div>
         <!-- Grography -->
-        <div id="categoryGeography" class="center-all grid-odd category-grid-item7" aria-label="Link to geography questions (opens in the same tab)">
+        <div id="categoryGeography" class="center-all pointer grid-odd category-grid-item7" aria-label="Link to geography questions (opens in the same tab)">
             <i class="fas fa-globe-europe"></i>
             <p>Geography</p>
         </div>
