Add pointer class to difficulty labels and remove the duplicate style from .diff-label

--- a/index.html
+++ b/index.html
@@ -136,17 +136,17 @@
             <!-- Easy button -->
             <div>
                 <input type="radio" name="difficulty" id="easy-diff" value="easy" checked>
-                <label for="easy-diff" class="diff-label" aria-label="Sets question to easy">Easy</label>
+                <label for="easy-diff" class="diff-label pointer" aria-label="Sets question to easy">Easy</label>
             </div>
             <!-- So-so button -->
             <div>
                 <input type="radio" name="difficulty" id="medium-diff" value="medium">
-                <label for="medium-diff" class="diff-label" aria-label="Sets question to so-so">So-so</label>
+                <label for="medium-diff" class="diff-label pointer" aria-label="Sets question to so-so">So-so</label>
             </div>
             <!-- Hard button -->
             <div>
                 <input type="radio" name="difficulty" id="hard-diff" value="hard">
-                <label for="hard-diff" class="diff-label" aria-label="Sets question to hard">Hard</label>
+                <label for="hard-diff" class="diff-label pointer" aria-label="Sets question to hard">Hard</label>
             </div>
         </div>
     </div>
