Add class of pointer to the option containers and remove duplicate styling

--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
         <!-- Question populated in script.js getNewQuestion() -->
         <h2 id="question"></h2>
         <!-- Options for user to select -->
-        <div class="options-container">
+        <div class="options-container pointer">
             <p class="option">A</p>
             <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option-text" aria-label="Option a (selects option a)"></p>
         </div>
-        <div class="options-container">
+        <div class="options-container pointer">
             <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option">B</p>
             <p class="option-text"  aria-label="Option b (selects option b)"></p>
         </div>
-        <div class="options-container">
+        <div class="options-container pointer">
             <p class="option">C</p>
             <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option-text" aria-label="Option c (selects option c)"></p>
         </div>
-        <div class="options-container">
+        <div class="options-container pointer">
             <p class="option">D</p>
             <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option-text"  aria-label="Option d (selects option d)"></p>
