Change organisation of buttons in style.css

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p id="close-questions-screen-menu" class="round-button center-all pointer">
             <i class="fas fa-times"></i>
         </p>
-        <p id="reset-game">Reset Game</p>
+        <p id="reset-game" class="pointer">Reset Game</p>
         <p id="end-game">End Game</p>
     </section>
 
