Add classes to #reset-game and #end-game in index.html

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         <p id="close-questions-screen-menu" class="round-button center-all pointer">
             <i class="fas fa-times"></i>
         </p>
-        <p id="reset-game" class="pointer">Reset Game</p>
-        <p id="end-game">End Game</p>
+        <p id="reset-game" class="pointer square-button">Reset Game</p>
+        <p id="end-game" class="pointer square-button">End Game</p>
     </section>
 
     <!-- Results screen section -->
