Add class of pointer to #header children in index.html

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <!--Header section -->
     <header id="header">
-        <i class="fab fa-think-peaks" id="logo"></i>
-        <p class="header-text" id="header-text">Smarticus</p>
+        <i class="fab fa-think-peaks pointer" id="logo"></i>
+        <p class="header-text pointer" id="header-text">Smarticus</p>
     </header>
 
     <!-- User form section -->
