--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </section>
 
     <section id="questions-screen-menu" class="center-all">
-        <p id="close-questions-screen-menu" class="round-button center-all pointer">
+        <p id="close-questions-screen-menu" class= "center-all pointer">
             <i class="fas fa-times"></i>
         </p>
         <p id="reset-game" class="pointer square-button menu-button">Reset Game</p>
