--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <form class="center-all" id="user-form" autocomplete="off">
             <label for="user-name">Enter your nickname and then lets have the craic!!</label>
             <input type="text" name="user-name" id="user-name" aria-label="Enter your name (required)" required>
-            <button id="user-submit" class="round-button" aria-label="Link to the catagories screen (opens in the same tab)"><i class="fas fa-arrow-right"></i></button>
+            <button id="user-submit" class="round-button" aria-label="Link to the catagories screen (opens in the same tab)">
+                <i class="fas fa-arrow-right"></i>
+            </button>
         </form>
     </section>
 
@@ -45,32 +47,31 @@
             <p>Pick a category</p>
         </div>
         <!-- Chooses the quiz catagories -->
-        <!-- Sport -->
         <div id="categorySports" class="center-all pointer grid-even category-grid-item2" aria-label="Link to sports questions (opens in the same tab)">
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
-        <!-- Science -->
+
         <div id="categoryScience" class="center-all pointer grid-odd category-grid-item3" aria-label="Link to science questions (opens in the same tab)">
             <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
-        <!-- Film -->
+
         <div id="categoryFilm" class="center-all pointer grid-even category-grid-item4" aria-label="Link to film questions (opens in the same tab)">
             <i class="fas fa-video"></i>
             <p>Film</p>
         </div>
-        <!-- History -->
+
         <div id="categoryHistory" class="center-all pointer grid-odd category-grid-item5" aria-label="Link to history questions (opens in the same tab)">
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
-        <!-- Music -->
+
         <div id="categoryMusic" class="center-all pointer grid-even category-grid-item6" aria-label="Link to music questions (opens in the same tab)">
             <i class="fas fa-music"></i>
             <p>Music</p>
         </div>
-        <!-- Grography -->
+
         <div id="categoryGeography" class="center-all pointer grid-odd category-grid-item7" aria-label="Link to geography questions (opens in the same tab)">
             <i class="fas fa-globe-europe"></i>
             <p>Geography</p>
@@ -79,8 +80,9 @@
 
     <!-- Question Section -->
     <section id="questions" class="center-all">
-        <!-- Closes the question screen -->
-        <p id="questions-menu" class="pointer"><i class="fas fa-bars"></i></p>
+        <p id="questions-menu" class="pointer">
+            <i class="fas fa-bars"></i>
+        </p>
         <!-- Quiz catagory populated in script.js addCatagoryToQuestionPage() -->
         <h3 id="quiz-category"></h3>
         <!-- User score populated in script.js increaseScore() -->
@@ -90,28 +92,29 @@
         <!-- Question populated in script.js getNewQuestion() -->
         <h2 id="question"></h2>
         <!-- Options for user to select -->
+        <!-- Option text populated in script.js getNewQuestion() -->
         <div class="options-container pointer">
             <p class="option">A</p>
-            <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option-text" aria-label="Option a (selects option a)"></p>
         </div>
+
         <div class="options-container pointer">
-            <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option">B</p>
             <p class="option-text"  aria-label="Option b (selects option b)"></p>
         </div>
+
         <div class="options-container pointer">
             <p class="option">C</p>
-            <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option-text" aria-label="Option c (selects option c)"></p>
         </div>
+
         <div class="options-container pointer">
             <p class="option">D</p>
-            <!-- Option text populated in script.js getNewQuestion() -->
             <p class="option-text"  aria-label="Option d (selects option d)"></p>
         </div>
     </section>
 
+    <!-- Question screen pop out menu -->
     <section id="questions-screen-menu" class="center-all">
         <p id="close-questions-screen-menu" class= "center-all pointer">
             <i class="fas fa-times"></i>
@@ -122,32 +125,37 @@
 
     <!-- Results screen section -->
     <section id="results-screen" class="center-all">
-        <h2><i class="fab fa-think-peaks"></i> Smarticus Quizzes</h2>
+        <h2>
+            <i class="fab fa-think-peaks"></i> Smarticus Quizzes
+        </h2>
         <!-- User's results from the game populated in script.js displayResults() -->
         <p id="results-user"></p>
         <!-- User's results from the game populated in script.js increaseScore() -->
         <p id="results-score"></p>
-        <button id="results-button" class="round-button pointer" aria-label="Link to the catagories screen (opens in the same tab)"><i class="fas fa-arrow-right"></i></button>
+        <button id="results-button" class="round-button pointer" aria-label="Link to the catagories screen (opens in the same tab)">
+            <i class="fas fa-arrow-right"></i>
+        </button>
     </section>
 
     <!-- Difficulty buttons section -->
     <div id="difficulty-buttons">
         <div id="difficulty" class="center-all">
-            <!-- Easy button -->
+
             <div>
                 <input type="radio" name="difficulty" id="easy-diff" value="easy" checked>
                 <label for="easy-diff" class="diff-label pointer square-button" aria-label="Sets question to easy">Easy</label>
             </div>
-            <!-- So-so button -->
+
             <div>
                 <input type="radio" name="difficulty" id="medium-diff" value="medium">
                 <label for="medium-diff" class="diff-label pointer square-button" aria-label="Sets question to so-so">So-so</label>
             </div>
-            <!-- Hard button -->
+
             <div>
                 <input type="radio" name="difficulty" id="hard-diff" value="hard">
                 <label for="hard-diff" class="diff-label pointer square-button" aria-label="Sets question to hard">Hard</label>
             </div>
+
         </div>
     </div>
 
